# mrt_route_suggestion

./: README.md  StationMap.csv  TrafficInfo.csv  initialize_data.py  models.py  requirements.txt  route_helper.py  route_manager.py  setup.cfg  shortest_route.py
mrt_app/: initialize_data.py  models.py  route_generator_v1.py  route_generator_v2.py  route_helper.py  route_manager.py  shortest_route.py
mrt_app/static/: swagger.json
tests/: test_route_generator_v1.py  test_route_generator_v2.py  test_route_helper.py  test_shortest_route.py
