[metadata]
name = mrt_app
version = 1.0.0
url = https://www.justlinn.com/
license = MIT
maintainer = Linn
maintainer_email = lhtetoo@gmail.com
description = The app which suggests MRT route from source to destination
long_description = file: README.md
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    mrt_app